# sql-insight

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  codecov.yml  deny.toml  release-plz.toml  renovate.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: coverage-report.yaml  pr-title.yaml  release-plz.yaml  release.yaml  rust.yaml  security-audit.yaml
cli/: Cargo.toml
cli/src/: executor.rs  main.rs
cli/tests/: cli.rs
lib/: Cargo.toml
lib/src/: formatter.rs
lib/src/extractor/: crud_table_extractor.rs  helper.rs  table_extractor.rs
sql-insight/: CHANGELOG.md  Cargo.toml
sql-insight-cli/: CHANGELOG.md  Cargo.toml  README.md
sql-insight-cli/src/: executor.rs  main.rs
sql-insight-cli/tests/: cli.rs  integration.rs
sql-insight/examples/: casing_override.rs  column_operations.rs  table_operations.rs  with_catalog.rs
sql-insight/src/: bind.rs  casing.rs  catalog.rs  diagnostic.rs  error.rs  extractor.rs  formatter.rs  lib.rs  normalizer.rs  operation.rs  plan.rs  reference.rs  relation.rs  resolver.rs  serde_support.rs  test_utils.rs
sql-insight/src/extractor/: column_operation_extractor.rs  column_operation_extractor_tests.rs  crud_table_extractor.rs  helper.rs  operation_extractor.rs  relation_binder.rs  table_extractor.rs  table_operation_extractor.rs
sql-insight/src/plan/: binder.rs  differential.rs  extract.rs  ir.rs  mod.rs  operation.rs  operator.rs  table_operation.rs  traverse.rs
sql-insight/src/resolver/: binder.rs  binding.rs  body_output.rs  casing.rs  catalog_match.rs  collapse.rs  collect.rs  column_ref.rs  composition.rs  context.rs  expr.rs  flow.rs  helpers.rs  ir.rs  lineage.rs  logical_plan.rs  mod.rs  operation.rs  operator.rs  origins.rs  projection.rs  query.rs  query_body_output.rs  reads.rs  relation_binder.rs  relation_resolver.rs  rename.rs  resolution.rs  resolve_expr.rs  resolve_query.rs  resolve_statement.rs  resolve_table.rs  scope.rs  statement.rs  table.rs  table_ref.rs  tables.rs  traverse.rs
sql-insight/src/resolver/binder/: catalog_match.rs  collect.rs  context.rs  expr.rs  helpers.rs  query.rs  resolve.rs  scope.rs  statement.rs  tests.rs
sql-insight/src/resolver/relation_binder/: expr.rs  query.rs  statement.rs  table.rs
sql-insight/src/resolver/relation_resolver/: expr.rs  query.rs  statement.rs  table.rs
sql-insight/tests/: catalog.rs  crud_table_extractor.rs  formatter.rs  identity.rs  integration.rs  invariants.rs  lib.rs  normalizer.rs  table_extractor.rs  table_operation_extractor.rs  version_numbers.rs
sql-insight/tests/column_operation_extractor/: arm_coverage.rs  casing.rs  cte_and_dml.rs  diagnostics.rs  joins_sets.rs  lineage.rs  main.rs  reads_semantics.rs  resolution.rs  support.rs  writes_deletes.rs
sql-insight/tests/column_operations/: arm_coverage.rs  writes_deletes.rs
src/: error.rs  extractor.rs  formatter.rs  lib.rs  main.rs  normalizer.rs
src/extractor/: crud_table_extractor.rs  mod.rs  table_extractor.rs
tests/: cli.rs  integration_test.rs  lib.rs
