[package]
name = "sql-insight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
sqlparser = { version = "0.41.0", features = ["visitor"] }
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.1.0"
delegate = "0.12.0"
