[package]
name = "sql-insight-cli"
description = "A CLI utility for SQL query analysis, formatting, and transformation."
documentation = "https://docs.rs/sql-insight-cli/"
keywords = ["sql", "query", "cli", "utility", "insight"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "sql-insight"
path = "src/main.rs"
doc = false

[dependencies]
sql-insight = { path = "../sql-insight", version = "0.2.0" }
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.1.0"
tokio = { version = "1.36.0", features = ["full"] }
