[package]
name = "sql-insight-cli"
description = "A CLI utility for SQL query analysis, formatting, and transformation."
documentation = "https://docs.rs/sql-insight-cli/"
keywords = ["sql", "cli", "lineage", "crud", "normalization"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
readme = "README.md"
# Bump the MINOR by hand (pre-1.0 breaking) when the CLI's output *format* changes
# — stdout shape or `--format json` structure — vs a value-only change (patch).
# Manual: tooling sees the API surface, not output/behaviour.
version = "0.2.1"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

# cargo-binstall: fetch the prebuilt `sql-insight` binary from the CLI's GitHub
# Release (built by .github/workflows/release.yaml) instead of compiling. The tag
# is per-crate (`sql-insight-cli-v{version}`) and the archive is
# `sql-insight-<target>`, so the pkg-url is spelled out; Windows ships a .zip, the
# rest a .tar.gz. First resolvable from the next CLI release under this scheme.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/sql-insight-cli-v{ version }/sql-insight-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/sql-insight-cli-v{ version }/sql-insight-{ target }.zip"
pkg-fmt = "zip"

[[bin]]
name = "sql-insight"
path = "src/main.rs"
doc = false

[dependencies]
# A breaking sql-insight bump (one the current caret requirement won't accept)
# means: update the requirement + bump the CLI minor by hand. Compatible bumps
# the caret already accepts flow automatically — no CLI release.
sql-insight = { path = "../sql-insight", version = "0.3.0", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
rustyline = "18.0.0"
serde = "1.0.228"
serde_json = "1.0.150"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.1.0"
tokio = { version = "1.36.0", features = ["full"] }
