[package]
name = "sql-insight"
description = "A utility for SQL query analysis, formatting, and transformation."
documentation = "https://docs.rs/sql-insight/"
keywords = ["sql", "query", "utility", "insight"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
name = "sql_insight"
path = "src/lib.rs"

[dependencies]
sqlparser = { version = "0.43.1", features = ["visitor"] }
thiserror = "1.0.56"


