[package]
name = "sql-insight"
description = "A utility for SQL query analysis, formatting, and transformation."
documentation = "https://docs.rs/sql-insight/"
keywords = ["sql", "lineage", "crud", "analysis", "query"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
readme = "README.md"
version = "0.3.0"
edition = { workspace = true }
rust-version = "1.89.0"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
name = "sql_insight"
path = "src/lib.rs"

[features]
serde = ["dep:serde"]

[dependencies]
sqlparser = { version = "0.62.0", features = ["visitor"] }
thiserror = "1.0.56"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
version-sync = "0.9.5"
